Moved UtilityOption to new module pg-utility-option-ast.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "parser/transaction-stmt",
     "parser/transaction-stmt-ast",
     "parser/type-combinators",
+    "parser/utility-option-ast",
     "parser/variable-stmt",
     "parser/xml-ast",
     "parser/xml-combinators",
@@ -88,6 +89,7 @@ pg-system-stmt = { path = "parser/system-stmt" }
 pg-transaction-stmt = { path = "parser/transaction-stmt" }
 pg-transaction-stmt-ast = { path = "parser/transaction-stmt-ast" }
 pg-type-combinators = { path = "parser/type-combinators" }
+pg-utility-option-ast = { path = "parser/utility-option-ast" }
 pg-variable-stmt = { path = "parser/variable-stmt" }
 pg-xml-ast = { path = "parser/xml-ast" }
 pg-xml-combinators = { path = "parser/xml-combinators" }
