--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "elog",
     "guc",
     "parser/ast",
+    "parser/check-point-stmt",
     "parser/collation-stmt",
     "parser/combinators",
     "parser/conversion-stmt",
@@ -63,6 +64,7 @@ test-case = "3"
 
 pg-ast = { path = "parser/ast" }
 pg-basics = { path = "basics" }
+pg-check-point-stmt = { path = "parser/check-point-stmt" }
 pg-collation-stmt = { path = "parser/collation-stmt" }
 pg-combinators = { path = "parser/combinators", features = [] }
 pg-conversion-stmt = { path = "parser/conversion-stmt" }
