Moved close_stmt to its own module.

--- a/parser/parser/Cargo.toml
+++ b/parser/parser/Cargo.toml
@@ -11,6 +11,7 @@ derive_more = { workspace = true, features = ["from"] }
 pg-ast.workspace = true
 pg-basics.workspace = true
 pg-check-point-stmt.workspace = true
+pg-close-stmt.workspace = true
 pg-collation-stmt.workspace = true
 pg-combinators.workspace = true
 pg-conversion-stmt.workspace = true
