--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "guc",
     "parser/ast",
     "parser/check-point-stmt",
+    "parser/close-stmt",
     "parser/collation-stmt",
     "parser/combinators",
     "parser/conversion-stmt",
@@ -65,6 +66,7 @@ test-case = "3"
 pg-ast = { path = "parser/ast" }
 pg-basics = { path = "basics" }
 pg-check-point-stmt = { path = "parser/check-point-stmt" }
+pg-close-stmt = { path = "parser/close-stmt" }
 pg-collation-stmt = { path = "parser/collation-stmt" }
 pg-combinators = { path = "parser/combinators", features = [] }
 pg-conversion-stmt = { path = "parser/conversion-stmt" }
